fixed z-index for expandable slide

--- a/src/js/components/ExpandableSlideShow/ExpandableSlide/ExpandableSlide.scss
+++ b/src/js/components/ExpandableSlideShow/ExpandableSlide/ExpandableSlide.scss
@@ -25,6 +25,7 @@
     }
     .slide-title {
       display: none;
+      z-index: 2;
     }
   }
   &.closed {
